--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "welcome-home",
+  "name": "welcome-home1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/next-js": "^2.1.5",
-    "@chakra-ui/react": "^2.8.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@ant-design/icons": "^5.2.6",
     "antd": "^5.10.2",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
-    "framer-motion": "^10.16.4",
+    "mapbox-gl": "^2.15.0",
     "next": "13.5.6",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "react-mapbox-gl": "^5.1.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
