--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "antd": "^5.10.2",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
+    "lightbox.js-react": "^0.9.5",
     "mapbox-gl": "^2.15.0",
     "next": "13.5.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-image-gallery": "^1.3.0",
     "react-mapbox-gl": "^5.1.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
