--- a/package.json
+++ b/package.json
@@ -11,18 +11,26 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.10.2",
+    "antd-img-crop": "^4.13.0",
+    "axios": "^1.5.1",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
     "lightbox.js-react": "^0.9.5",
     "mapbox-gl": "^2.15.0",
     "next": "13.5.6",
     "postcss-flexbugs-fixes": "^5.0.2",
+    "random-avatar-generator": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-image-gallery": "^1.3.0",
     "react-mapbox-gl": "^5.1.1",
+    "react-redux": "^8.1.3",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
