--- a/server/.env
+++ b/server/.env
@@ -5,5 +5,7 @@ MONGODB_URL=mongodb+srv://Asikur:12345@cluster0.txiokqr.mongodb.net/welcomeHomes
 JWT_SECRET=welcomeHomes$$$$^^^^^^lmnxa3367^&
 JWT_EXPIRE=3d
 
+MAIL_SENDER=asikur@kayapay.co
+MAIL_PASS=xgxj plnw angr atft
 
-
+CLIENT_URL=http://localhost:3000
