--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^8.1.3",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
