--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
     "antd": "^5.10.2",
     "antd-img-crop": "^4.13.0",
     "axios": "^1.5.1",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
+    "firebase": "^10.5.0",
     "lightbox.js-react": "^0.9.5",
     "mapbox-gl": "^2.15.0",
     "next": "13.5.6",
@@ -22,8 +28,10 @@
     "random-avatar-generator": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.11.0",
     "react-image-gallery": "^1.3.0",
+    "react-map-gl": "^7.1.6",
     "react-mapbox-gl": "^5.1.1",
     "react-redux": "^8.1.3",
     "react-spinners": "^0.13.8",
@@ -32,7 +40,9 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
-    "swiper": "^10.3.1"
+    "supercluster": "^8.0.1",
+    "swiper": "^10.3.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
