--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@mapbox/mapbox-sdk": "^0.15.3",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "antd": "^5.10.2",
@@ -23,6 +24,7 @@
     "firebase": "^10.5.0",
     "lightbox.js-react": "^0.9.5",
     "mapbox-gl": "^2.15.0",
+    "moment": "^2.29.4",
     "next": "13.5.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "random-avatar-generator": "^2.0.0",
