--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@mapbox/mapbox-sdk": "^0.15.3",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "antd": "^5.10.2",
@@ -43,7 +44,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "supercluster": "^8.0.1",
-    "swiper": "^10.3.1",
+    "swiper": "^10.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
