--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-image-gallery": "^1.3.0",
     "react-map-gl": "^7.1.6",
     "react-mapbox-gl": "^5.1.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
