--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
+    "@tremor/react": "^3.10.0",
     "antd": "^5.10.2",
     "antd-img-crop": "^4.13.0",
     "axios": "^1.5.1",
@@ -46,6 +47,7 @@
     "redux-thunk": "^2.4.2",
     "supercluster": "^8.0.1",
     "swiper": "^10.0.0",
+    "tremor": "^0.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
