--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-mapbox-gl": "^5.1.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
+    "react-responsive": "^9.0.2",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
