--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.11.0",
     "react-image-gallery": "^1.3.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-map-gl": "^7.1.6",
     "react-mapbox-gl": "^5.1.1",
     "react-quill": "^2.0.0",
