--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@mapbox/mapbox-sdk": "^0.15.3",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@tremor/react": "^3.10.0",
@@ -36,6 +37,7 @@
     "react-icons": "^4.11.0",
     "react-image-gallery": "^1.3.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-js-pagination": "^3.0.3",
     "react-map-gl": "^7.1.6",
     "react-mapbox-gl": "^5.1.1",
     "react-quill": "^2.0.0",
