--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "antd": "^5.10.2",
     "antd-img-crop": "^4.13.0",
     "axios": "^1.5.1",
+    "country-state-city": "^3.2.1",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
     "firebase": "^10.5.0",
